# terminalNotes

./: .gitignore  README.md  notes.py  pyproject.toml  requirements.txt  setup.py
