[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-notes"
version = "1.0.0"
description = "A beautiful and powerful notes application in your terminal"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name"},
]
dependencies = [
    "typer>=0.16.0",
    "rich>=14.1.0",
]

[project.scripts]
notes = "notes:app"

[tool.setuptools]
py-modules = ["notes"]
